--- a/styles/header.css
+++ b/styles/header.css
@@ -14,6 +14,7 @@
 header {
   background-color: var(--mainColor);
   color: white;
+  width: 100vw;
 }
 header .header {
   padding: 0px 30px;
