--- a/styles/templete-servs.css
+++ b/styles/templete-servs.css
@@ -10,9 +10,6 @@
   -webkit-box-sizing: border-box;
   font-family: var(--mainFont);
 }
-nav {
-  position: relative;
-}
 .container {
   padding: 0px 10px;
   margin: auto;
@@ -37,6 +34,7 @@ nav {
   padding: 20px;
   direction: rtl;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  overflow-x: hidden;
 }
 .content h2 {
   text-transform: uppercase;
@@ -72,7 +70,6 @@ nav {
     font-size: 15px;
   }
  }
-
 @media (min-width: 768px) {
   .content img {
     width: 300px;
@@ -87,7 +84,6 @@ nav {
     padding-right: 30px;
   }
 }
-
 @media (min-width: 992px) { 
   .container {
     width: 80%;
